[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.19", features = ["serde"] }
tui = { version = "0.15", default-features = false, features = ["crossterm", "serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.17"
log4rs = "1.2.0"
tui-logger = { git = "https://github.com/gin66/tui-logger", rev = "3a3568e2464dddc2205e071234135998342d7f1d" }

tokio = { version = "1", features = ["full"] }
eyre = "0.6"
similar = "2.2.1"
