[package]
name = "checker-tema-3-sd"
version = "0.1.7"
edition = "2021"
authors = ["Robert Grancsa <robert.grancsa2002@gmail.com>"]
license = "MIT"
description = "An interactive checker built for the 3rd homework at the data-structures course"
readme = "README.md"
homepage = "https://github.com/RobertGrancsa/checker"
repository = "https://github.com/RobertGrancsa/checker"
keywords = ["cli", "checker", "tui"]
categories = ["command-line-utilities"]
exclude = [
    "test_env/*",
    "*.c",
    "*.h",
    "Makefile",
    "data/*",
    "checker/*",
    "*.sh",
    "*.zip",
    "data.json",
    "*.cpp",
]


[dependencies]
crossterm = { version = "0.24", features = ["serde"] }
tui = { version = "0.19", default-features = false, features = ["crossterm", "serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.17"
log4rs = "1.2.0"
tui-logger = "0.9.0"

tokio = { version = "1", features = ["full"] }
eyre = "0.6"
similar = "2.2.1"

