[package]
name = "hw_checker"
version = "0.4.3"
edition = "2021"
authors = ["Robert Grancsa <robert.grancsa2002@gmail.com>"]
license = "MIT"
description = "An interactive checker built for the homeworks"
readme = "README.md"
homepage = "https://github.com/RobertGrancsa/checker"
repository = "https://github.com/RobertGrancsa/checker"
keywords = ["cli", "checker", "tui"]
categories = ["command-line-utilities"]
exclude = [
    "test_env/*",
    "*.c",
    "*.h",
    "Makefile",
    "data/*",
    "checker/*",
    "target/*",
    "*.sh",
    "*.zip",
    "data.json",
    "*.cpp",
	"*.yaml"
]


[dependencies]
crossterm = { version = "0.27", features = ["serde"] }
ratatui = { version = "0.26", default-features = false, features = ["crossterm", "serde"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.17"
log4rs = "1.2.0"
tui-logger = "0.11.0"

tokio = { version = "1", features = ["full"] }
eyre = "0.6"
similar = "2.2.1"
